--- a/mobile_store/templates/user_panel/base.html
+++ b/mobile_store/templates/user_panel/base.html
@@ -66,6 +66,18 @@
       console.log("cart", cart);
 
     </script>
+    <script src="{% static 'user/js/cart.js' %}"></script>
+    <script type="text/javascript">
+    (function(d, m){
+        var kommunicateSettings = 
+            {"appId":"kommunicate-support","popupWidget":true,"automaticChatOpenOnNavigation":true};
+        var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+        s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+        var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+        window.kommunicate = m; m._globals = kommunicateSettings;
+    })(document, window.kommunicate || {});
+/* NOTE: Use webserver to view HTML files as the real-time update will not work if you directly open the HTML file in the browser. */
+</script>
   </head>
   <body>
 
@@ -79,7 +91,7 @@
 {% url 'user_store' as user_store%}
 <a href="{% url 'user_store' %}" class="ml-2 mr-2 colr an {% if request.path == user_store %}active{% endif %}">Store</a>
 {% url 'user_contact' as user_contact%}
-<a href="{% url 'user_store' %}" class="ml-2 mr-2 colr an {% if request.path == user_store %}active{% endif %}">Contact</a>
+<a href="{% url 'user_contact' %}" class="ml-2 mr-2 colr an {% if request.path == user_contact %}active{% endif %}">Contact</a>
 </div>
 <div class="col-4">
 </div>
@@ -210,6 +222,6 @@
 
   </div>
 
-    <script src="{% static 'user/js/cart.js' %}"></script>
+    
   </body>
 </html>
