--- a/mobile_store/templates/user_panel/login.html
+++ b/mobile_store/templates/user_panel/login.html
@@ -7,15 +7,19 @@
 
 		<div class="col-lg-4">
         <h3 class="mt-3">Log In </h3>
-        <label>Email</label>
-			<input type="email" class="form-control" placeholder="abc@gmail.com">
+        <form method="POST" action="{% url 'user_login' %}">
+        {% csrf_token %}
+        <label>user name</label>
+			<input type="text" class="form-control" placeholder="User name" name="user_name" required>
              <label>password</label>
-			<input type="password" class="form-control" placeholder="qazxyv">
+			<input type="password" class="form-control" placeholder="password" name="password" required>
             <button class="btn btn-secondary mt-2 mb-5">Submit</button>
 		</div>
+        </form>
         <div class="col-lg-4">
     </div>
 	</div>
+    
 {% endblock content %}
 
 
