--- a/mobile_store/templates/user_panel/contact.html
+++ b/mobile_store/templates/user_panel/contact.html
@@ -9,12 +9,18 @@
 {% for chat in Chat %}
 
 
-<p>
-{{chat.user_message}}
-</p>
-<p class="ml-5">
-{{chat.chatbot_message}}
-</p>
+
+
+
+
+<div class="alert alert-dark " role="alert">
+ <p> {{chat.user_message}}</p>
+</div>
+
+<div class="alert alert-primary ml-5" role="alert">
+<p class="text-left"> {{chat.chatbot_message}}</p>
+</div>
+
 
 
 
@@ -26,9 +32,9 @@
 
 
 <form id="form" method="POST">
-    <input id="user_messages" type="text" name="user_messages">
+    <input id="user_messages" type="text" name="user_messages" class="form-control">
     <input id="chatbot_messages" type="hidden" name="chatbot_messages" value="123123">
-    <input  type="submit" name="submit" value="submit">
+    <input  type="submit" name="submit" value="click">
 </form>
 
 
@@ -53,7 +59,6 @@ e.preventDefault();
        },
        
        success: function(data){
-          $('#output').html(data.msg) /* response message */
           location.reload();
        },
 
